--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "thujohn/pdf",
+    "name": "thujohn/pdf-laravel",
     "description": "dompdf for Laravel 4",
 	"keywords": ["pdf", "dompdf", "laravel", "laravel4"],
     "license": "MIT",
